// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render ProjectItem component correctly with uname === project.user 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        class="project-infos"
      >
        <div
          class="project-data"
        >
          <p
            class="project__name"
          >
            Project one
          </p>
          <p
            class="project__user"
          >
            <span
              class="static-text"
            >
              By: 
            </span>
            1
          </p>
          <p
            class="project__time"
          >
            <span
              class="static-text"
            >
              On: 
            </span>
            now
          </p>
          <div
            class="project__users"
          >
            <span
              class="static-text"
            >
              Users in: 
            </span>
            <span>
              1 
            </span>
          </div>
          <div
            class="project__admins"
          >
            <span
              class="static-text"
            >
              Admins in: 
            </span>
            <span>
              1 
            </span>
            <span>
              admin 
            </span>
          </div>
        </div>
        <div
          class="project-buttons"
        >
          <button>
            Edit
          </button>
          <button>
            Delete
          </button>
        </div>
      </div>
      <div>
        NewBug
      </div>
      <div
        class="bugs"
      >
        <p>
          All bugs:
        </p>
        <div
          class="bug-list-item-container"
        >
          <a>
            <div
              class="bug-list-item"
            >
              <div
                class="bug-list-item__title-cls"
              >
                <h3>
                  Bug title
                </h3>
                <p
                  class="medium"
                >
                  medium
                </p>
              </div>
              <p
                class="bug-list-item__description"
              >
                Bug description...
              </p>
              <div
                class="bug-list-item__user-time"
              >
                <p>
                  admin
                </p>
                <p>
                  now
                </p>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div>
      ProjectDelModal
    </div>
    <div>
      ProjectEditModal
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render ProjectItem component correctly with uname in the project 1`] = `
<DocumentFragment>
  <div>
    <div>
      <div
        class="project-infos"
      >
        <div
          class="project-data"
        >
          <p
            class="project__name"
          >
            Project one
          </p>
          <p
            class="project__user"
          >
            <span
              class="static-text"
            >
              By: 
            </span>
            1
          </p>
          <p
            class="project__time"
          >
            <span
              class="static-text"
            >
              On: 
            </span>
            now
          </p>
          <div
            class="project__users"
          >
            <span
              class="static-text"
            >
              Users in: 
            </span>
            <span>
              1 
            </span>
          </div>
          <div
            class="project__admins"
          >
            <span
              class="static-text"
            >
              Admins in: 
            </span>
            <span>
              1 
            </span>
            <span>
              admin 
            </span>
          </div>
        </div>
      </div>
      <div>
        NewBug
      </div>
      <div
        class="bugs"
      >
        <p>
          All bugs:
        </p>
        <div
          class="bug-list-item-container"
        >
          <a>
            <div
              class="bug-list-item"
            >
              <div
                class="bug-list-item__title-cls"
              >
                <h3>
                  Bug title
                </h3>
                <p
                  class="medium"
                >
                  medium
                </p>
              </div>
              <p
                class="bug-list-item__description"
              >
                Bug description...
              </p>
              <div
                class="bug-list-item__user-time"
              >
                <p>
                  admin
                </p>
                <p>
                  now
                </p>
              </div>
            </div>
          </a>
        </div>
      </div>
    </div>
    <div>
      ProjectDelModal
    </div>
    <div>
      ProjectEditModal
    </div>
  </div>
</DocumentFragment>
`;

exports[`Should render ProjectItem component correctly with uname not in the project 1`] = `
<DocumentFragment>
  <div>
    <div>
      Not able to see this project! 
      <a>
        Create one!
      </a>
    </div>
    <div>
      ProjectDelModal
    </div>
    <div>
      ProjectEditModal
    </div>
  </div>
</DocumentFragment>
`;
